fixed mobile alignments

--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -12,17 +12,28 @@
     position: absolute;
     cursor: pointer;
 
-    // @include mobile {
-    //   display: none;
-    // }
+    @include mobile {
+      display: none;
+      height: 30px;
+      position: absolute;
+      cursor: pointer;
+    }
 
     &.left {
       left: 100px;
       transform: rotateY(180deg);
+
+      @include mobile {
+        left: 10px;
+      }
     }
+    
 
     &.right {
       right: 100px;
+      @include mobile {
+        right: 10px;
+      }
     }
   }
 
@@ -35,7 +46,7 @@
 
     @include mobile {
       height: 90vh;
-      flex-direction: column;
+      // flex-direction: column;
       flex-wrap: wrap;
       justify-content: center;
     }
